--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,15 +5,15 @@
       "args": ["--rcfile", "${workspaceFolder}/bootstrap/.project.env"]
     }
   },
-  // "files.exclude": {
-  //   "**/.git": true,
-  //   "**/.tmp": true,
-  //   "**/.envrc": true,
-  //   "**/Makefile": true,
-  //   "**/shell.nix": true,
-  //   "**/.vscode": false,
-  //   "**/bootstrap": true,
-  //   "**/README.md": true
-  // },
+  "files.exclude": {
+    "**/.git": true,
+    "**/.tmp": true,
+    "**/.envrc": true,
+    "**/Makefile": false,
+    "**/shell.nix": false,
+    "**/.vscode/settings.json": true,
+    "**/bootstrap": true,
+    "**/README.md": true
+  },
   "terminal.integrated.defaultProfile.linux": "ProjectEnv"
 }
